# ElMejorCamp

backend/: Dockerfile  pyproject.toml  run.py
backend/app/: __init__.py
backend/app/api/: __init__.py
backend/app/api/v1/endpoints/: sheet.py
backend/app/api/v1/schemas/: sheet.py
frontend/: Dockerfile  script.js  style.css  translations.js
frontend/login/: index.html  script.js  style.css
