[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Metin100 <9455@holbertonstudents.com>"]
license = "\\"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.115.8"}
sqlmodel = "^0.0.22"
google-api-python-client = "^2.160.0"
google-auth-httplib2 = "^0.2.0"
google-auth-oauthlib = "^1.2.1"
pydantic = "^2.10.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
